app/assets/stylesheets/dul-arclight/dul_styles.scss
/* ... */
.title-action-wrapper {
  margin-top: 0.75rem;

  border-top: 1px dotted shade($gray-lighter, 5%);
  padding-top: .75rem;
  margin-top: 1.5rem;
}


.collection-banner {
  border-bottom: none;

  h1 {
    font-size: 2.5rem;
    margin-bottom: 2rem;
    font-weight: 700;

    @include media-breakpoint-down(md) {
      font-size: 1.75rem;
    }

  }
}

.al-show-sub-heading {
  font-size: 1.5rem;
  text-transform: unset;
  color: $gray;
  border-top: 1px dotted shade($gray-lighter, 5%);
  padding-top: 1.5rem;
  margin-top: 1rem;

  #summary & {
    border-top: 3px solid lighten($gray-light, 5%);
  }

}

.al-show-sub-heading + dl > dt {
  text-transform: uppercase;
  padding-top: .625rem;
  padding-bottom: .125rem;
  margin-top: 0;
}

#document {
  padding-left: 15px;
  padding-right: 15px;
}

#document dl {
  margin-bottom: 2rem;
}

#restrictions-preview dl {
  margin-bottom: 0;
}

.collection-name-wrapper {
  margin-top: .75rem;
  display: block;
  position: relative;
  &:before {
    content: ' ';
    display: inline-block;
    position: absolute;
    width: 1rem;
    height: 100%;
    border-right: 1.5px solid lighten($gray-light-more, 10%);
    height: calc(100% - 18px);
    bottom: -1.4rem;
  }
  a {
    text-decoration: none;
    font-weight: 700;
    line-height: 1.1;
    font-size: 1.9rem;

    i.fas {
      display: block;
      position: absolute;
    }
    .collection-name {
      display: block;
      margin-left: 2.25rem;
    }
  }
}

/* item breadcrumbs */

#document .breadcrumb {
  &:before {
    content: ' ';
    display: block;
    border-bottom: 1.5px solid lighten($gray-light-more, 10%);
    width: .48rem;
    left: 0;
    top: -.55rem;
    position: relative;
  }
  padding: 0;
  margin-top: .5rem;
  margin-left: .9rem;
  margin-bottom: 1rem;
  list-style: none;
  background-color: white;
  border-radius: 0;

  .breadcrumb-item {
    flex: unset;
    color: $gray-light;
  }

  .breadcrumb-item::before {
    padding-right: .25rem;
    color: $gray-light-more;
    content: '»';
  }

  .breadcrumb-home-link::before {
    content: '';
  }

}

/* item metadata */

#document dl.al-metadata-section {
  background-color: $facet-grey;
  border-top: 1px dotted $gray-light-more;
  padding: 1rem;
}

#access {

  h2 {
    border-top: 1px solid shade($gray-lighter, 3);
    padding-top: 1rem;
  }

  hr {
    display: none;
  }
}


/* sidebar styles */

@include media-breakpoint-down(sm) {
  ul.al-context-nav-parent {
    padding-left: 33px;
  }
  #collection-context > .context-navigator {
    padding-left: 0;
  }
}



#sidebar {
  background: white;
  padding-top: 10px;
  box-shadow: 1px 0 1px -1px rgba(0, 0, 0, 0.06),
              2px 0 2px -2px rgba(0, 0, 0, 0.06),
              4px 0 4px -4px rgba(0, 0, 0, 0.06),
              8px 0 8px -8px rgba(0, 0, 0, 0.06),
              16px 0 16px -16px rgba(0, 0, 0, 0.06);

  h2 {
    font-weight: bold;
    font-size: 20px;
    text-transform: uppercase;
    .fas {
      margin-right: 0.2rem;
    }
    /* Remove the ArcLight-core applied tab heading for the context nav */
    &.sr-only {
      display: none;
    }
  }
}

#context {

  @include media-breakpoint-down(sm) {
    padding-top: 0 !important;
  }

  .actions-wrapper {
    margin-right: 0 !important;

    .al-show-actions {
      background: #f5f5f5;
      margin: -15px -15px 15px -15px !important;
      padding: 15px;
      padding-top: 2rem;
      border-bottom: 1px solid $gray-light-more;
      padding-bottom: 25px;
      /*
      @include media-breakpoint-down(sm) {
        margin: 0 0 15px 0 !important;
        padding-top: 1rem;
      }
      */
    }

    .sidebar-collection-title {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      display: block;
      width: 100%;
    }

    .btn.al-show-actions-collection-info {
      background-color: none;
    }

    .collection-info-table {
      td:first-of-type {
        font-weight: bold;
        a {
          font-weight: normal;
        }
      }
      td:nth-of-type(2) {
        text-align: right;
      }
      .al-online-content-icon {
        padding-right: 0.2rem;
      }
      @include media-breakpoint-down(lg) {
        font-size: 15px;
      }
    }
  }


  .nav-link {
    padding: .25rem 0 .25rem 0;
    font-weight: 700;
    color: $gray;
    display: inline-block;

    &:hover {
      color: $primary-link-color;
      text-decoration: underline;
    }
  }

  .tab-content {

    h2 {
      font-size: 24px;
    }

  }

  /* add some padding for circular expand/contract buttons */
  li.al-collection-context {
    .col.col-no-left-padding.d-flex.flex-wrap {
      padding-left: 4px !important;
    }
  }

  li.al-hierarchy-highlight {

    .al-toggle-children-container {
      background-color: $facet-grey;
      padding-top: .2rem;
      padding-bottom: .2rem;
      margin-top: -.2rem;
      margin-bottom: -.2rem;
      z-index: 10;
    }

    .al-collection-context-collapsible.show .al-toggle-children-container {
      background-color: unset !important;
      padding: 0 .4rem 0 0 !important;
      margin-left: -1.4rem;
      margin-top: -.2rem;
      margin-bottom: -.4rem;
    }

    .col {
      background-color: $facet-grey;
      border-right: 5px solid $primary-link-color;
      padding-top: .2rem;
      padding-bottom: .2rem;
      margin-top: -.2rem;
      margin-bottom: -.2rem;
      border-left: 1.45rem solid #f5f5f5;
      margin-left: -1.45rem !important;
      margin-right: .85rem !important;

      .col {
        background-color: unset;
        padding: 0;
        border-right: none;
        border-left: none;
        margin-left: -.4rem !important;
      }
    }
  }

}

.al-toggle-children-container {
  margin-left: -1rem;
  opacity: 1;

  a.al-toggle-view-children {
    opacity: 1;
    background-color: $primary-link-color-inverted;
    filter: invert(100%);
    border-radius: 50%;
    display: inline-block;
  }
}
/* ... */

